--- a/src/styles/ImageSlider.css
+++ b/src/styles/ImageSlider.css
@@ -1,10 +1,10 @@
 
 .container__slider {
   position: relative;
-  width: 111.05911%; 
+  width: 100%; 
   height: 90vh;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-bottom: 0px;
   padding: 0;
   overflow: hidden;
   display: flex;
@@ -141,7 +141,7 @@
 
 .slider__item img {
   width: 200vh;
-  margin-bottom: 95px;
+  margin-bottom: 0px;
   margin-top: 10px;
   height: 170vh;
   opacity: 0.3;
@@ -202,10 +202,12 @@
 
 
 .concontainer{
-  padding: 5%;
+  margin-top: 5%;
+  padding: 0%;
   display: flex;
-   
+  background-color: #dbe9e9;
   justify-content: center;
   align-items: middle;
   aspect-ratio: 18 / 6;
+  width: 100%; 
 }
